fix: use dark-gold for pdp hovers and fix purchase option checkmark visibility

--- a/frontend/entrypoints/main.css
+++ b/frontend/entrypoints/main.css
@@ -8,6 +8,7 @@
     --breakpoint-xl: 96rem; /* 1536px */
     --breakpoint-2xl: 112rem; /* 1792px */
     --color-gold: #FFD700/100%;
+    --color-dark-gold: #AF7404/100%;
     --color-sky-blue: #BFD7E9/100%;
     --color-grey-tag: #E1E1E1/100%;
     --color-light-sky: #D9EAF7/100%;
